<resources>
    <string name="app_name">Quick Chat</string>

    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>


    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="signup">Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="signup_button_lable">Sign Up</string>
    <string name="signup_error_message">Please enter an username, a password, and an email address.</string>
    <string name="signup_error_title">It seems like something went wrong!</string>
    <string name="login_error_message">Please enter an username and a password.</string>
    <string name="login_error_title">It seems like something went wrong!</string>
    <string name="fragment_inbox_label">No new messages!</string>
    <string name="fragment_friends_lable">Add friends to get started</string>
    <string name="title_activity_edit_friends">Edit Friends</string>

    <string name="action_edit_friends">Edit Friends</string>
    <string name="error_title">We are sorry</string>
    <string name="menu_camera_label">Camera</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="error_external_storage_message">There was a problem accessing you device\'s external storage</string>
    <string name="error_intent_result">Sorry there was an errror</string>
    <string name="error_file_size">File size too large</string>
    <string name="title_activity_recipients">Choose Recipients</string>

    <string name="hello_world">Hello world!</string>
    <string name="recipients_add_friends">Add Friends First</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file_title">We\'re Sorry!</string>
    <string name="error_selecting_file">There was an error selecting your file. Please pick another file to send</string>
    <string name="error_sending_message">Unable to send file. Please try again.</string>
    <string name="message_sent">Message Sent!</string>
    <string name="general_error">Oops, something went wrong</string>
    <string name="error_opening_file">Could not open file</string>
    <string name="error_file_too_large">File too large</string>
    <string name="inbox_no_new_messages">You don\'t have any new messages yet</string>
    <string name="title_activity_view_image">ViewImageActivity</string>
</resources>
